--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "debug": "^4.3.6",
     "define-data-property": "^1.1.4",
     "delayed-stream": "^1.0.0",
+    "dotenv": "^16.4.5",
     "ecc-jsbn": "^0.1.2",
     "emoji-regex": "^8.0.0",
     "end-of-stream": "^1.4.4",
